--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "http-server": "^13.0.1",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.2.0",
     "postcss": "^8.3.6",
