--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-dev-server": "^4.0.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "webpack-nano": "^1.1.1",
     "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
