--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "autoprefixer": "^10.3.2",
     "babel-loader": "^8.2.2",
@@ -41,6 +42,7 @@
     "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.0",
     "desandro-classie": "^1.0.1",
