--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@babel/preset-env": "^7.15.0",
     "autoprefixer": "^10.3.2",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "express": "^4.17.1",
+    "favicons": "^6.2.2",
+    "favicons-webpack-plugin": "^5.0.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "http-server": "^13.0.1",
