--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,9 @@
 {
   "short_name": "Tayebeh",
   "name": "Tayebeh Safdari Doost",
+  "dir": "ltr",
+  "lang": "en-US",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "favicon.ico",
