--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "private": true,
   "scripts": {
     "test": "jest",
@@ -29,6 +30,11 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "http-server": "^13.0.1",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.0",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.2.0",
     "postcss": "^8.3.6",
